[gd_scene load_steps=2 format=3 uid="uid://j7ucou8f74m6"]

[ext_resource type="Script" path="res://addons/dialogue_creator/Nodes/node.gd" id="1_7dflf"]

[node name="Node" type="GraphNode"]
offset_right = 370.0
offset_bottom = 270.0
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_7dflf")

[node name="vBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="vBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="vBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "ID:"
vertical_alignment = 1

[node name="ID" type="SpinBox" parent="vBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0
allow_lesser = true

[node name="VSeparator" type="VSeparator" parent="vBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="vBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Type:"

[node name="Type" type="OptionButton" parent="vBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "Exit"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Say"
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "Response"
popup/item_2/id = 2

[node name="VBoxContainer" type="VBoxContainer" parent="vBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="vBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Label" type="Label" parent="vBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Dialogue:"

[node name="Dialogue" type="TextEdit" parent="vBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="vBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.2

[node name="Close" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.4
text = "Close"

[connection signal="item_selected" from="vBoxContainer/HBoxContainer/Type" to="." method="_on_type_item_selected"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
